# nv-c13-tomography-qml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: batch.yaml  default.yaml  reproduce.yaml
data/avg_counts/: 2025_11_11-01_15_45-johnson_204nv_s6-6d8f5c.txt
data/fits/: 2025_11_17-09_49_42-sample_204nv_s1-fcc605.txt
scripts/: run_simulation.py
src/nv_c13_echo_sim/: __init__.py  catalog.py  echo_core.py  echo_mapping.py  fine_decay.py  fit_loader.py  plotting.py  rng.py  selection.py  simulator.py  synth.py
src/nv_c13_tomography/: __init__.py  catalog.py  constants.py  echo_mapping.py  hyperfine.py  noise.py  plotting.py  rng.py  simulator.py
src/utils/: __init__.py  priors.py  synth.py
